--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+debug=true
+
 # Enabling H2 Console
 spring.h2.console.enabled=true
 
@@ -26,6 +28,9 @@ spring.datasource.continue-on-error=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 header.names= Rang,Prenoms,Noms,Centre,PV,Origine,Mention
+vies.header.names= Rang,Prenoms,Noms,Centre,PV,Origine,Mention
+
+
 line.delimiter=,
 
 logging.level.org.springframework.web=ERROR
