--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-debug=true
+#debug=true
+
+server.port = 9090
+logging.level.org.springframework.ws=TRACE
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
